--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240208.0",
+    "@types/node": "^20.11.25",
     "wrangler": "^3.25.0"
   }
 }
