--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^5.10.2",
     "@prisma/extension-accelerate": "^1.0.0",
     "hono": "^4.0.9",
+    "mediumhelpertools": "^1.0.1",
     "prisma": "^5.10.2"
   },
   "devDependencies": {
